--- a/04A_MLP_Optimizer_Sandbox_Assignment.ipynb
+++ b/04A_MLP_Optimizer_Sandbox_Assignment.ipynb
@@ -597,15 +597,12 @@
    "outputs": [],
    "source": [
     "## Short Answer\n",
-    "## SGD: The recognition rate of SGD fluctuates greatly and is lower than the other two methods'rate with the same \n",
-    "## iterations. And the cross Entropy of SGD is higher than others.\n",
     "\n",
-    "## SGD with momentum: The recognition rate of SGD with momentum fluctuates slightly. And the performance is better \n",
-    "## than SGD but worse than ADAM. \n",
+    "## SGD: The recognition rate of SGD fluctuates greatly and is lower than the other two methods'rate with the same iterations. And the cross Entropy of SGD is higher than others.\n",
     "\n",
-    "## ADAM: With the number of iterations increasing, the recognition performance of ADAM increases steadily. \n",
-    "## With the fewer number of iterations,the recognition rate of ADAM is much higher than the other two methods. \n",
-    "## What's more, ADAM has smaller cross Entropy, better recognition performance and faster convergence speed. \n",
+    "## SGD with momentum: The recognition rate of SGD with momentum fluctuates slightly. And the performance is better than SGD but worse than ADAM. \n",
+    "\n",
+    "## ADAM: With the number of iterations increasing, the recognition performance of ADAM increases steadily. With the fewer number of iterations,the recognition rate of ADAM is much higher than the other two methods. What's more, ADAM has smaller cross Entropy, better recognition performance and faster convergence speed. \n",
     "\n",
     "## Due to the flexibility of the model,it's not easy to tune the model's parameters"
    ]
